; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-bcm1480.c_WRITECFG32.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/pci/extr_pci-bcm1480.c_WRITECFG32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cfg_space = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @WRITECFG32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WRITECFG32(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* @cfg_space, align 8
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, -4
  %9 = sext i32 %8 to i64
  %10 = add nsw i64 %6, %9
  %11 = inttoptr i64 %10 to i32*
  store i32 %5, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
